--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -7,9 +7,9 @@ jobs:
   build_and_publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Build and push the images
         run: |
           docker login --username Andresmup --password ${{ secrets.GH_TOKEN}} ghcr.io
           docker build . -t ghcr.io/andresmup/lambda-s3-alb-container:latest
-          cd docker push  ghcr.io/andresmup/lambda-s3-alb-container:latest
+          docker push  ghcr.io/andresmup/lambda-s3-alb-container:latest
